# clecmas

./: .env.example  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  documentation_task.yml  implementation_task.yml  rules_engine_task.yml  security_hygiene_task.yml
.github/workflows/: ci.yml
docs/: README.md  repository-initialization-status.md
docs/adr/: 0000-template.md  README.md
docs/architecture/: README.md  boundaries.md
docs/control/: README.md
docs/handoff/: README.md  deployment-placeholder.md
docs/roadmap/: README.md
scripts/: README.md
src/clecmas/: __init__.py
src/clecmas/agents/: __init__.py
src/clecmas/alerts/: __init__.py
src/clecmas/api/: app.py
src/clecmas/audit/: __init__.py
src/clecmas/cli/: __init__.py  main.py
src/clecmas/config/: __init__.py  settings.py
src/clecmas/domain/: __init__.py
src/clecmas/rag/: __init__.py
src/clecmas/rules/: __init__.py
src/clecmas/security/: __init__.py
src/clecmas/storage/: __init__.py
src/clecmas/ui/: __init__.py  app.py
src/clecmas/worker/: main.py
tests/: __init__.py  test_smoke.py
