[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "clecmas"
version = "0.1.0"
description = "Governed AI-assisted compliance operations platform for continuing education evidence, rules, alerts, and audit readiness."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary - private repository pending license decision" }
authors = [
  { name = "CLECMAS Project" }
]
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.34,<1.0",
  "streamlit>=1.40,<2.0",
  "sqlalchemy>=2.0,<3.0",
  "alembic>=1.13,<2.0",
  "psycopg[binary]>=3.2,<4.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "httpx>=0.27,<1.0",
  "pgvector>=0.3,<1.0",
  "python-multipart>=0.0.9,<1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3,<10.0",
  "pytest-cov>=5.0,<7.0",
  "ruff>=0.6,<1.0",
  "mypy>=1.10,<2.0",
  "pip-audit>=2.7,<3.0",
  "pip-licenses>=5.0,<6.0"
]

[project.scripts]
clecmas = "clecmas.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/clecmas"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = []

[tool.mypy]
python_version = "3.12"
packages = ["clecmas"]
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
